--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.38",
+    "@expo-google-fonts/poppins": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^7.3.9",
+    "@react-navigation/native": "^7.1.5",
+    "@react-navigation/native-stack": "^7.3.9",
+    "expo": "~52.0.42",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.487.0",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-view": "^2.0.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
