--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.3.0",
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
-    "expo": "~52.0.42",
+    "expo": "~52.0.46",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.487.0",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
@@ -25,9 +29,7 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-safe-area-view": "^2.0.0",
     "react-native-screens": "~4.4.0",
-    "react-dom": "18.3.1",
-    "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
